--- a/client/src/app/pages/profile/profile.component.html
+++ b/client/src/app/pages/profile/profile.component.html
@@ -160,11 +160,14 @@
 
           <div class="section-content">
             <h6>Delete Account</h6>
-            <mat-form-field appearance="outline">
-              <mat-label>Username</mat-label>
-              <input matInput placeholder="Write your username">
-              <mat-hint>Write your username to confirm account deletion</mat-hint>
-            </mat-form-field>
+            <form [formGroup]="deleteAccountForm" (ngSubmit)="openConfirmAccountDeletionDialog()">
+              <mat-form-field appearance="outline">
+                <mat-label>Username</mat-label>
+                <input matInput placeholder="Write your username" formControlName="username">
+                <mat-hint>Write your username to confirm account deletion</mat-hint>
+              </mat-form-field>
+              <button mat-raised-button color="accent" *ngIf="isDeleteable">Delete</button>
+            </form>
           </div>
         </div>
       </div>
