--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -37,16 +37,13 @@
 		}
 
 		.profile-image {
+			background-size: contain;
 			width: 40px;
 			height: 40px;
 			border: 1px solid rgba(0, 0, 0, 0.2);
 			border-radius: 50%;
 			float: right;
 			cursor: pointer;
-			img {
-				border-radius: 50%;
-				width: 100%;
-			}
 		}
 	}
 
