--- a/client/src/app/pages/profile/cpi/cpi.component.scss
+++ b/client/src/app/pages/profile/cpi/cpi.component.scss
@@ -1,43 +1,42 @@
 .image {
-    position: relative;
-    margin-bottom: 25px;
-	img {
-        display: block;
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    
-    .delete-user-image {
-        background-color: #F44336;
-        box-shadow: 0 8px 20px 0 rgba(0, 0, 0, .6);
-        cursor: pointer;
-        padding: 10px 12px;
-        border-radius: 50%;
-        position: absolute;
-        top: 0;
-        right: 10px;
+  background-size: contain;
+  position: relative;
+  margin-bottom: 25px;
+  display: block;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
 
-        fa-icon {
-            color: white;
-        }
+  .delete-user-image {
+    background-color: #F44336;
+    box-shadow: 0 8px 20px 0 rgba(0, 0, 0, .6);
+    cursor: pointer;
+    padding: 10px 12px;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    right: 10px;
+
+    fa-icon {
+      color: white;
     }
+  }
 }
 
 .controls {
-    button {
-        &:not(:last-child) {
-            margin-right: 5px;
-        }
-
-        fa-icon {
-            margin-right: 5px;
-        }
+  button {
+    &:not(:last-child) {
+      margin-right: 5px;
     }
+
+    fa-icon {
+      margin-right: 5px;
+    }
+  }
 }
 
 mat-progress-spinner {
-    display: inline-block;
+  display: inline-block;
 }
