mainly added share resource component

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -19,6 +19,7 @@
       fixedTopGap="56">
       <mat-nav-list>
         <a routerLink="/feed" routerLinkActive="active-sidenav"><fa-icon [icon]="faStream"></fa-icon>&nbsp;&nbsp;Feed</a>
+        <a routerLink="/share-resource" routerLinkActive="active-sidenav"><fa-icon [icon]="faShareAlt"></fa-icon>&nbsp;&nbsp;Share Resource</a>        
       </mat-nav-list>
     </mat-sidenav>
 
