--- a/client/src/app/pages/feed/feed.component.html
+++ b/client/src/app/pages/feed/feed.component.html
@@ -7,10 +7,11 @@
       <fa-icon [icon]="faPlus"></fa-icon>
     </button>
     <button 
+    routerLink="/share-resource"
     class="fab-add-post" 
     mat-mini-fab 
-    matTooltip="Add a Post" 
-    matTooltipPosition="left" 
+    matTooltip="Share a Resource" 
+    matTooltipPosition="left"
     [ngClass]="isFabActive ? 'animation-scaleAppear' : 'animation-scaleDisappear'">
       <fa-icon [icon]="faLink"></fa-icon>
     </button>
