--- a/client/src/app/pages/profile/profile.component.scss
+++ b/client/src/app/pages/profile/profile.component.scss
@@ -1,17 +1,5 @@
-.profile-container {
-    padding: 15px 15px 15px 25px;
-
+.section-container {
     .section {
-        margin-top: 15px;
-        border-radius: 5px;
-        box-shadow: 0 8px 20px 0 rgba(218,224,235,.6);
-        background-color: white;
-        padding: 2px 15px 15px 15px;
-        max-width: 600px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 30px;
-
         .profile-picture {
             border-radius: 50%;
             display: flex;
@@ -59,34 +47,6 @@
 
                 &:hover {
                     border-color: #2196F3;
-                }
-            }
-        }
-
-        .section-header {
-            text-transform: uppercase;
-            margin-bottom: 15px;
-
-            h4 {
-                margin-bottom: 10px;
-            }
-        }
-
-        .section-content {
-            h6 {
-                font-family: 'Raleway', sans-serif;
-                text-transform: uppercase;
-                margin-top: 25px;
-            }
-
-            mat-form-field {
-                display: block;
-                width: 100%;
-            }
-
-            .form-button-container {
-                button {
-                    float: right;
                 }
             }
         }
