--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -87,3 +87,53 @@ mat-nav-list {
     height: 96px;
     position: relative;
 }
+
+.section-container {
+	padding: 15px 15px 15px 25px;
+
+	.section {
+        margin-top: 15px;
+        border-radius: 5px;
+        box-shadow: 0 8px 20px 0 rgba(218,224,235,.6);
+        background-color: white;
+        padding: 2px 15px 15px 15px;
+        max-width: 600px;
+        margin-left: auto;
+        margin-right: auto;
+		margin-bottom: 30px;
+
+		.section-header {
+            text-transform: uppercase;
+            margin-bottom: 15px;
+
+            h4 {
+                margin-bottom: 10px;
+            }
+		}
+		
+		.section-content {
+            h6 {
+                font-family: 'Raleway', sans-serif;
+                text-transform: uppercase;
+                margin-top: 25px;
+            }
+
+            mat-form-field {
+                display: block;
+                width: 100%;
+			}
+			
+			.mat-checkbox-container {
+				margin-bottom: 15px;
+				font-size: 14px;
+			}
+
+            .form-button-container {
+                button {
+                    float: right;
+                }
+            }
+        }
+
+	}
+}
