--- a/client/src/app/pages/share-resource/share-resource.component.html
+++ b/client/src/app/pages/share-resource/share-resource.component.html
@@ -18,6 +18,9 @@
         <mat-form-field appearance="outline">
           <mat-label>Link</mat-label>
           <input matInput placeholder="Paste your link here" formControlName="url">
+          <mat-error *ngIf="shareResourceForm.controls['url'].hasError('urlInvalid')">
+            Invalid link 
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline">
