--- a/client/src/app/pages/share-resource/share-resource.component.scss
+++ b/client/src/app/pages/share-resource/share-resource.component.scss
@@ -1,14 +1,37 @@
 .section-container {
     .section {
         .section-content {
-            .resource-image {
+            .custom-image {
                 background-color: rgb(233, 231, 231);
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-position: center;
                 border-radius: 10px;
                 width: 100%;
                 height: 350px;
                 margin-bottom: 15px;
                 position: relative;
                 cursor: pointer;
+
+                p {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    text-align: center;
+                }
+            }
+
+            .resource-image {
+                background-color: rgb(233, 231, 231);
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-position: center;
+                border-radius: 5px;
+                width: 100%;
+                height: 350px;
+                margin-bottom: 15px;
+                position: relative;
 
                 p {
                     position: absolute;
