can now save resource and put it in a collection

--- a/client/src/app/pages/share-resource/share-resource.component.html
+++ b/client/src/app/pages/share-resource/share-resource.component.html
@@ -63,9 +63,11 @@
           <mat-label>Collections</mat-label>
           <input type="text" placeholder="Select or Create New" matInput [matAutocomplete]="auto" formControlName="collectionName">
           <mat-autocomplete #auto="matAutocomplete">
-            <mat-option *ngFor="let name of collectionNames" [value]="name">
-              {{name}}
-            </mat-option>
+            <mat-optgroup label="Existing Collections">
+              <mat-option *ngFor="let name of collectionNames" [value]="name">
+                {{name}}
+              </mat-option>
+            </mat-optgroup>
           </mat-autocomplete>
         </mat-form-field>
 
