minor style changes

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -107,13 +107,14 @@ mat-nav-list {
             margin-bottom: 15px;
 
             h4 {
+                font-family: 'Noto Sans SC', sans-serif;
                 margin-bottom: 10px;
             }
 		}
 		
 		.section-content {
             h6 {
-                font-family: 'Raleway', sans-serif;
+                font-family: 'Noto Sans SC', sans-serif;
                 text-transform: uppercase;
                 margin-top: 25px;
             }
