--- a/client/src/app/pages/feed/post/post.component.scss
+++ b/client/src/app/pages/feed/post/post.component.scss
@@ -37,7 +37,7 @@
         padding: 20px 15px 10px 15px;
 
         strong {
-            font-family: 'Raleway', sans-serif;
+            font-family: 'Noto Sans SC', sans-serif;
             font-size: 20px;
         }
     }
