wip manage resources

--- a/client/src/app/pages/feed/post/atc/atc.component.scss
+++ b/client/src/app/pages/feed/post/atc/atc.component.scss
@@ -16,9 +16,10 @@
 }
 
 .dialog-title {
+    font-size: 16px;
     max-width: 400px;
     strong {
-        font-family: 'Raleway', sans-serif;
+        font-family: 'Noto Sans SC', sans-serif;
     }
 }
 
