--- a/client/src/app/pages/feed/post/post.component.scss
+++ b/client/src/app/pages/feed/post/post.component.scss
@@ -38,7 +38,7 @@
 
         strong {
             font-family: 'Noto Sans SC', sans-serif;
-            font-size: 20px;
+            font-size: 16px;
         }
     }
 
@@ -64,6 +64,7 @@
         line-height: 25px;
 
         p {
+            font-size: 14px;
             margin-bottom: 0;
         }
     }
@@ -186,5 +187,21 @@ textarea {
     100% {
         opacity: 1;
         transform: scale(1.0);
+    }
+}
+
+@media (min-width: 768px) {
+    .post {
+        .title {
+            strong {
+                font-size: 20px;
+            }
+        }
+
+        .description {
+            p {
+                font-size: 16px;
+            }
+        }
     }
 }
