--- a/client/src/app/pages/profile/profile.component.html
+++ b/client/src/app/pages/profile/profile.component.html
@@ -24,6 +24,7 @@
             </div>
             <button class="toggle-profile-view" mat-stroked-button (click)="isPublicView = false">Edit Profile</button>
           </div>
+          <button class="toggle-profile-view-sm" mat-stroked-button (click)="isPublicView = false">Edit Profile</button>
 
           <mat-divider></mat-divider>
           
@@ -55,6 +56,7 @@
             </div>
             <button class="toggle-profile-view" mat-stroked-button (click)="isPublicView = true; getUserData();">View Profile</button>
           </div>
+          <button class="toggle-profile-view-sm" mat-stroked-button (click)="isPublicView = true; getUserData();">View Profile</button>
           <mat-divider></mat-divider>
           <div class="section-header">
             <h4>Personal Information</h4>
