--- a/client/src/app/pages/manage-resources/manage-resources.component.scss
+++ b/client/src/app/pages/manage-resources/manage-resources.component.scss
@@ -21,13 +21,10 @@
                     margin-bottom: 25px;
 
                     .image {
-                        background-repeat: no-repeat;
-                        background-size: cover;
-                        background-position: center center;
                         border-top-left-radius: 5px;
                         border-bottom-left-radius: 5px;
-                        width: 200px;
                         max-width: 200px;
+                        object-fit: cover;
                     }
 
                     .details {
