--- a/client/src/app/pages/manage-resources/manage-resources.component.scss
+++ b/client/src/app/pages/manage-resources/manage-resources.component.scss
@@ -15,12 +15,12 @@
                 .resource {
                     display: inline-flex;
                     width: 100%;
-                    border: 1px solid rgba(107, 107, 107, 0.1);
+                    border: 1px solid rgba(14, 13, 13, 0.158);
                     border-radius: 5px;
-                    box-shadow: 0 8px 20px 0 rgba(218, 224, 235, 0.6);
                     margin-bottom: 25px;
 
                     .image {
+                        display: none;
                         border-top-left-radius: 5px;
                         border-bottom-left-radius: 5px;
                         max-width: 200px;
@@ -34,6 +34,22 @@
                             button {
                                 margin-right: 5px;
                             }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 602px) {
+    .section-container {
+        .section {
+            .section-content {
+                .list-of-resources {
+                    .resource {
+                        .image {
+                            display: inherit;
                         }
                     }
                 }
