--- a/client/src/app/general/resource/resource.component.html
+++ b/client/src/app/general/resource/resource.component.html
@@ -12,7 +12,7 @@
         <fa-icon [icon]="faEdit"></fa-icon>
       </button>
 
-      <button mat-button color="warn">
+      <button mat-button color="warn" (click)="openDrDialog()">
         <fa-icon [icon]="faTrashAlt"></fa-icon>
       </button>
     </div>
