--- a/client/src/app/general/dialogs/dr/dr.component.html
+++ b/client/src/app/general/dialogs/dr/dr.component.html
@@ -1,2 +1,8 @@
 <h1 mat-dialog-title>Delete Resource</h1>
 
+<p>Are you sure you want to delete <strong>{{ data.title }}</strong></p>
+
+<div mat-dialog-actions>
+  <button mat-button (click)="onNoClick()">Cancel</button>
+  <button mat-button (click)="onYesClick()" cdkFocusInitial>Ok</button>
+</div>
