--- a/client/src/app/pages/manage-resources/manage-resources.component.html
+++ b/client/src/app/pages/manage-resources/manage-resources.component.html
@@ -18,7 +18,7 @@
             </mat-form-field>
           </form>
 
-          <app-resource *ngFor="let resource of resources" [data]="resource" (selectedId)="sendBackId($event)"></app-resource>
+          <app-resource *ngFor="let resource of resources" [data]="resource" (drResponse)="drResponseHandler($event)"></app-resource>
         </div>
       </div>
     </mat-tab>
