--- a/client/src/app/pages/share-resource/share-resource.component.html
+++ b/client/src/app/pages/share-resource/share-resource.component.html
@@ -72,7 +72,7 @@
         </mat-form-field>
 
         <div class="form-button-container clearfix">
-          <button mat-raised-button color="primary">Share</button>
+          <button mat-raised-button color="primary" [disabled]="isDisabled">Share</button>
         </div>
       </form>
     </div>
