fixed view resource

--- a/client/src/app/pages/view-resource/view-resource.component.html
+++ b/client/src/app/pages/view-resource/view-resource.component.html
@@ -1,1 +1,3 @@
-<app-post [data]="resource"></app-post>
+<div class="padding-15">
+    <app-post *ngIf="resource" [data]="resource"></app-post>
+</div>
