--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -88,6 +88,10 @@ mat-nav-list {
     position: relative;
 }
 
+.padding-15 {
+    padding: 15px;
+}
+
 .section-container {
 	padding: 15px 15px 15px 25px;
 
