--- a/client/src/app/general/resource/resource.component.html
+++ b/client/src/app/general/resource/resource.component.html
@@ -8,7 +8,7 @@
         <fa-icon [icon]="faEye"></fa-icon>
       </button>
 
-      <button mat-button>
+      <button [routerLink]="['/edit-resource/', id]" mat-button>
         <fa-icon [icon]="faEdit"></fa-icon>
       </button>
 
