almost done with edit resource

--- a/client/src/app/pages/edit-resource/edit-resource.component.html
+++ b/client/src/app/pages/edit-resource/edit-resource.component.html
@@ -22,7 +22,7 @@
       </div>
 
 
-      <form [formGroup]="editResourceForm" (ngSubmit)="submiteditResourceForm()">
+      <form [formGroup]="editResourceForm" (ngSubmit)="submitEditResourceForm()">
         <div class="mat-checkbox-container">
           <mat-checkbox formControlName="isCustomImage">Use custom image</mat-checkbox>
         </div>
