edit resource button added to view resource

--- a/client/src/app/pages/edit-resource/edit-resource.component.html
+++ b/client/src/app/pages/edit-resource/edit-resource.component.html
@@ -28,7 +28,7 @@
         </div>
         <mat-form-field appearance="outline">
           <mat-label>Link</mat-label>
-          <input matInput placeholder="Paste your link here" formControlName="url">
+          <input matInput placeholder="Paste your link here" formControlName="url" (focus)="onFocus()">
           <mat-error *ngIf="editResourceForm.controls['url'].hasError('urlInvalid')">
             Invalid link
           </mat-error>
