added loading and fixed timestamp

--- a/client/src/app/pages/edit-resource/edit-resource.component.html
+++ b/client/src/app/pages/edit-resource/edit-resource.component.html
@@ -1,5 +1,5 @@
 <mat-progress-bar mode="query" *ngIf="isLoading"></mat-progress-bar>
-<div class="section-container">
+<div class="section-container" *ngIf="!isLoading">
   <div class="section">
     <div class="section-header">
       <h4>Edit Resource</h4>
