moving resource between collections implemented

--- a/client/src/app/pages/edit-resource/edit-resource.component.html
+++ b/client/src/app/pages/edit-resource/edit-resource.component.html
@@ -71,7 +71,7 @@
           </mat-autocomplete>
         </mat-form-field>
 
-        <div class="form-button-container clearfix">
+        <div class="form-button-container clearfix" id="done-button">
           <button mat-raised-button color="primary" [disabled]="isDisabled">Done</button>
         </div>
       </form>
