wip atc component

--- a/client/src/app/general/dialogs/atc/atc.component.html
+++ b/client/src/app/general/dialogs/atc/atc.component.html
@@ -5,14 +5,14 @@
 <p class="dialog-title">
   <strong>{{ data.title }}</strong>
 </p>
-<form [formGroup]="addToCollectionForm">
+<form [formGroup]="addToCollectionForm" (ngSubmit)="submitAddToCollectionForm()">
   <div mat-dialog-content>
     <mat-form-field appearance="outline">
       <mat-label>Collections</mat-label>
       <input type="text" placeholder="Select or Create New" matInput [matAutocomplete]="auto"
         formControlName="collectionName">
       <mat-autocomplete #auto="matAutocomplete">
-        <mat-optgroup label="Existing Collections">
+        <mat-optgroup label="Move to Existing Collections">
           <mat-option *ngFor="let name of collectionNames" [value]="name">
             {{name}}
           </mat-option>
