--- a/client/src/app/general/dialogs/atc/atc.component.html
+++ b/client/src/app/general/dialogs/atc/atc.component.html
@@ -5,7 +5,7 @@
 <p class="dialog-title">
   <strong>{{ data.title }}</strong>
 </p>
-<form [formGroup]="addToCollectionForm" (ngSubmit)="submitAddToCollectionForm()">
+<form [formGroup]="addToCollectionForm">
   <div mat-dialog-content>
     <mat-form-field appearance="outline">
       <mat-label>Collections</mat-label>
@@ -22,6 +22,6 @@
   </div>
   <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">Cancel</button>
-    <button mat-button (click)="onYesClick()" cdkFocusInitial>Ok</button>
+    <button mat-button (click)="submitAddToCollectionForm()" cdkFocusInitial>Ok</button>
   </div>
 </form>
