--- a/client/src/app/pages/manage-resources/manage-resources.component.scss
+++ b/client/src/app/pages/manage-resources/manage-resources.component.scss
@@ -10,6 +10,10 @@
                     top: 2px;
                 }
             }
+
+            .list-of-collections {
+                text-align: center;
+            }
         }
     }
 }
