--- a/client/src/app/general/collection/collection.component.html
+++ b/client/src/app/general/collection/collection.component.html
@@ -1,9 +1,9 @@
 <div class="collection-container">
   <div class="collection">
-    <div class="block"></div>
-    <div class="block"></div>
-    <div class="block"></div>
-    <div class="block"></div>
+    <div class="block" [ngStyle]="{'background-image': 'url('+ image1 +')'}"></div>
+    <div class="block" [ngStyle]="{'background-image': 'url('+ image2 +')'}"></div>
+    <div class="block" [ngStyle]="{'background-image': 'url('+ image3 +')'}"></div>
+    <div class="block" [ngStyle]="{'background-image': 'url('+ image4 +')'}"></div>
   </div>
 
   <p class="collection-name">{{ data.title | truncate:[17] }}</p>
