--- a/client/src/app/pages/feed/feed.component.html
+++ b/client/src/app/pages/feed/feed.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar mode="query" *ngIf="isLoading"></mat-progress-bar>
 <div class="feed-container">
   <app-post *ngFor="let post of posts" [data]="post"></app-post>
 
