--- a/client/src/app/pages/view-resource/view-resource.component.html
+++ b/client/src/app/pages/view-resource/view-resource.component.html
@@ -1,7 +1,7 @@
 <div class="padding-15">
   <app-post *ngIf="resource" [data]="resource"></app-post>
   <div class="edit-resource-container">
-    <button mat-fab color="primary" [routerLink]="['/edit-resource/', id]">
+    <button mat-fab color="primary" (click)="goToEdit()">
       <fa-icon [icon]="faPen"></fa-icon>
     </button>
   </div>
